FF config