@@ -96,6 +96,14 @@ configurations {
   e2eTestsRuntime.extendsFrom testRuntime
 }
 
+task fortifyScan(type: JavaExec)  {
+  mainClass.set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  // The line below prevents the build from failing if the Fortify scan detects issues
+  ignoreExitValue = true
+}
+
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
@@ -358,7 +366,7 @@ dependencies {
     exclude(module: 'commons-logging')
     exclude(module: 'android-json')
   }
-
+  testCompile 'com.github.hmcts:fortify-client:1.3.0:all'
   testImplementation group: 'com.jayway.awaitility', name: 'awaitility', version: '1.7.0'
   testImplementation group: 'com.github.stefanbirkner', name: 'system-lambda', version: '1.2.1'
   testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
